--- a/src/App.scss
+++ b/src/App.scss
@@ -7,10 +7,6 @@ $light-green: #39783c;
 $dark-gold: #D89F2D;
 $light-gold: #E9DB8A;
 
-$breakpoints: (phone: 640px,
-  tablet: 768px,
-  desktop: 1024px) !default;
-
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -109,7 +105,8 @@ body {
     margin-right: 20px;
 
     @include _970 {
-      width: 800px;;
+      width: 800px;
+      ;
       z-index: 999;
       height: 50px;
     }
@@ -343,6 +340,7 @@ body {
           padding: 10px 15px;
         }
       }
+
       .btn {
         margin-top: 30px;
         background-color: $dark-green;
@@ -357,14 +355,14 @@ body {
         border: 0;
         position: relative;
         cursor: pointer;
-  
+
         @include _500 {
           margin-top: 20px;
           padding: 0 20px;
           height: 40px;
           line-height: 40px;
         }
-  
+
         &::before {
           content: "";
           position: absolute;
@@ -374,11 +372,11 @@ body {
           height: 2px;
           width: 100%;
         }
-  
+
         &:hover {
           transition: all .4s ease-out;
           background-color: $light-green;
-  
+
           &::before {
             transform: scaleX(1);
             transition: all .4s ease-out;
@@ -386,12 +384,12 @@ body {
           }
         }
       }
-  
+
       #about {
         ul {
-  
+
           li {
-  
+
             b {
               width: 120px;
               display: inline-block;
@@ -414,7 +412,7 @@ body {
               @include _380 {
                 width: 70px;
               }
-  
+
               &::after {
                 content: ":";
                 position: absolute;
@@ -423,15 +421,15 @@ body {
                 right: 0;
               }
             }
-  
+
             span {
               display: inline-block;
               width: 80%;
-  
+
               @include _1170 {
                 width: 77%;
               }
-  
+
               @include _665 {
                 width: 75%;
               }
@@ -447,34 +445,34 @@ body {
           }
         }
       }
-  
+
       #resume {
-  
+
         .skills-box {
           display: flex;
           flex-wrap: wrap;
-  
+
           .progress-wrap {
             flex: 0 0 50%;
             max-width: 50%;
             margin-top: 30px;
-  
+
             .progress-title {
               font-weight: 600;
               margin-bottom: 0;
             }
-  
+
             .progress {
               display: flex;
               align-items: center;
-  
+
               .progress-container {
                 background: #ababab;
                 display: block;
                 height: 6px;
                 width: 85%;
                 position: relative;
-  
+
                 .progress-active {
                   position: absolute;
                   left: 0;
@@ -487,25 +485,25 @@ body {
           }
         }
       }
-  
+
       #portfolios {
-  
+
         .portfolios-wrap {
           display: flex;
           flex-wrap: wrap;
-  
+
           .portfolios-box {
             width: 33.333333%;
             margin-bottom: 20px;
-  
+
             @include _1170 {
               width: 50%;
             }
-  
+
             @include _725 {
               width: 100%;
             }
-  
+
             .potfolio-image {
               position: relative;
               width: 230px;
@@ -513,27 +511,27 @@ body {
               background-position: center center;
               background-repeat: no-repeat;
               overflow: hidden;
-  
+
               @include _1170 {
                 width: 280px;
                 height: 155px;
               }
-  
+
               @include _970 {
                 width: 330px;
                 height: 180px;
               }
-  
+
               @include _800 {
                 width: 300px;
                 height: 170px;
               }
-  
+
               @include _725 {
                 width: 100%;
                 height: auto;
               }
-  
+
               &::before {
                 content: "";
                 position: absolute;
@@ -549,13 +547,13 @@ body {
                 -webkit-transform-origin: 0;
                 transform-origin: 0;
               }
-  
+
               img {
                 vertical-align: middle;
                 min-height: 100%;
                 min-width: 100%;
               }
-  
+
               ul {
                 margin-bottom: 0;
                 padding-left: 0;
@@ -571,12 +569,12 @@ body {
                 margin-top: 30px;
                 -webkit-transition: all .075s ease-in-out .2s;
                 transition: all .075s ease-in-out .2s;
-  
+
                 li {
                   list-style: none;
                   display: inline-block;
                   margin: 0 7px;
-  
+
                   button,
                   a {
                     cursor: pointer;
@@ -595,7 +593,7 @@ body {
                     font-size: 1.25rem;
                     -webkit-transition: all .4s ease-out;
                     transition: all .4s ease-out;
-  
+
                     svg {
                       vertical-align: middle;
                       overflow: hidden;
@@ -604,12 +602,12 @@ body {
                   }
                 }
               }
-  
+
               &:hover {
                 &::before {
                   transform: scaleX(1);
                 }
-  
+
                 ul {
                   visibility: visible;
                   opacity: 1;
@@ -617,7 +615,7 @@ body {
                 }
               }
             }
-  
+
             p {
               font-size: 1.14rem;
               line-height: 1.857rem;
@@ -625,15 +623,15 @@ body {
           }
         }
       }
-  
+
       #contact {
-  
+
         form {
-  
+
           .form-field {
             margin-top: 30px;
             position: relative;
-  
+
             label {
               position: absolute;
               left: 15px;
@@ -646,7 +644,7 @@ body {
               padding: 0 10px;
               font-size: .94rem;
             }
-  
+
             input,
             textarea {
               border: 1px solid $dark-green;
@@ -654,7 +652,7 @@ body {
               height: 50px;
               padding: 0 15px;
             }
-  
+
             textarea {
               height: 190px;
               padding: 10px 15px;
