--- a/src/App.css
+++ b/src/App.css
@@ -570,6 +570,9 @@ body {
   overflow: hidden;
   height: 100%;
 }
+#wrapper main .border #portfolios .portfolios-wrap .portfolios-box .potfolio-image ul li.clicked .popup {
+  display: block;
+}
 #wrapper main .border #portfolios .portfolios-wrap .portfolios-box .potfolio-image:hover::before {
   transform: scaleX(1);
 }
@@ -581,6 +584,30 @@ body {
 #wrapper main .border #portfolios .portfolios-wrap .portfolios-box p {
   font-size: 1.14rem;
   line-height: 1.857rem;
+}
+#wrapper main .border #portfolios .portfolios-wrap .portfolios-box .popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: linear-gradient(rgba(30, 30, 30, 0.6), #000 1810%);
+  z-index: 9999999;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  display: none;
+}
+#wrapper main .border #portfolios .portfolios-wrap .portfolios-box .popup img {
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 #wrapper main .border #contact form .form-field {
   margin-top: 30px;
