--- a/src/App.scss
+++ b/src/App.scss
@@ -600,6 +600,12 @@ body {
                       height: 100%;
                     }
                   }
+
+                  &.clicked {
+                    .popup {
+                      display: block;
+                    }
+                  }
                 }
               }
 
@@ -619,6 +625,32 @@ body {
             p {
               font-size: 1.14rem;
               line-height: 1.857rem;
+            }
+
+            .popup {
+              position: fixed;
+              width: 100%;
+              height: 100%;
+              top: 0;
+              left: 0;
+              background: linear-gradient(rgba(30,30,30,.6),#000 1810%);
+              z-index: 9999999;
+              -webkit-user-select: none;
+              -moz-user-select: none;
+              -ms-user-select: none;
+              user-select: none;
+              -webkit-tap-highlight-color: transparent;
+              display: none;
+
+              img {
+                display: block;
+                width: 60%;
+                margin: 0 auto;
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+              }
             }
           }
         }
