--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ body {
 }
 
 #wrapper {
-  width: 1100px;
+  max-width: 1100px;
   font-family: "Nunito Sans", sans-serif;
   margin: 0 auto;
   height: 100%;
@@ -457,14 +457,15 @@ body {
 #wrapper main .border #portfolios .portfolios-wrap {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
 #wrapper main .border #portfolios .portfolios-wrap .portfolios-box {
-  width: 33.333333%;
+  width: 32%;
   margin-bottom: 20px;
 }
 @media (max-width: 1170px) {
   #wrapper main .border #portfolios .portfolios-wrap .portfolios-box {
-    width: 50%;
+    width: 45%;
   }
 }
 @media (max-width: 725px) {
@@ -474,35 +475,9 @@ body {
 }
 #wrapper main .border #portfolios .portfolios-wrap .portfolios-box .potfolio-image {
   position: relative;
-  width: 230px;
-  height: 130px;
   background-position: center center;
   background-repeat: no-repeat;
   overflow: hidden;
-}
-@media (max-width: 1170px) {
-  #wrapper main .border #portfolios .portfolios-wrap .portfolios-box .potfolio-image {
-    width: 280px;
-    height: 155px;
-  }
-}
-@media (max-width: 970px) {
-  #wrapper main .border #portfolios .portfolios-wrap .portfolios-box .potfolio-image {
-    width: 330px;
-    height: 180px;
-  }
-}
-@media (max-width: 800px) {
-  #wrapper main .border #portfolios .portfolios-wrap .portfolios-box .potfolio-image {
-    width: 300px;
-    height: 170px;
-  }
-}
-@media (max-width: 725px) {
-  #wrapper main .border #portfolios .portfolios-wrap .portfolios-box .potfolio-image {
-    width: 100%;
-    height: auto;
-  }
 }
 #wrapper main .border #portfolios .portfolios-wrap .portfolios-box .potfolio-image::before {
   content: "";
