--- a/src/App.css
+++ b/src/App.css
@@ -71,16 +71,8 @@ body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0 auto;
   height: 100%;
-}
-@media (max-width: 1600px) {
-  #wrapper {
-    width: 1100px;
-  }
-}
-@media (max-width: 1170px) {
-  #wrapper {
-    width: 960px;
-  }
+  padding: 0 15px;
+  box-sizing: border-box;
 }
 @media (max-width: 970px) {
   #wrapper {
@@ -187,11 +179,6 @@ body {
   font-weight: 200;
   line-height: 2.5rem;
   outline: none;
-}
-@media (max-width: 970px) {
-  #wrapper aside nav ul li a {
-    line-height: 2.9rem;
-  }
 }
 @media (max-width: 525px) {
   #wrapper aside nav ul li a {
