--- a/src/media_mixin.scss
+++ b/src/media_mixin.scss
@@ -48,13 +48,28 @@
       @content;
   }
 }
+@mixin _410{
+  @media (max-width: 410px){
+      @content;
+  }
+}
 @mixin _380{
   @media (max-width: 380px){
       @content;
   }
 }
+@mixin _370{
+  @media (max-width: 370px){
+      @content;
+  }
+}
 @mixin _360{
   @media (max-width: 360px){
+      @content;
+  }
+}
+@mixin _350{
+  @media (max-width: 350px){
       @content;
   }
 }
