--- a/src/App.css
+++ b/src/App.css
@@ -100,12 +100,12 @@ body {
     width: 800px;
     z-index: 999;
     height: 50px;
-    left: 0;
   }
 }
 @media (max-width: 870px) {
   #wrapper aside {
     width: 100%;
+    left: 0;
   }
 }
 #wrapper aside .heading {
@@ -179,7 +179,7 @@ body {
   z-index: 1;
   cursor: pointer;
   font-weight: 200;
-  line-height: 100%;
+  line-height: 2.6rem;
   outline: none;
   height: 100%;
 }
